# waschmaschine

./: .gitignore  Cargo.toml  README.md  checkouts.txt
.github/workflows/: rust.yml
src/: checkouts.rs  main.rs
