[package]
name = "waschmaschine"
version = "0.1.0"
description = "A darts checkout api written in rust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
